[project]
name = "owyn_pr_agent"
version = "0.0.1"
description = "This is the start of your AgentStack project."
authors = [
    { name = "Name <Email>" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "pygithub (>=2.5.0,<3.0.0)",
    "crewai (>=0.102.0,<0.103.0)",
    "crewai-tools (>=0.33.0,<0.34.0)",
    "openlit>=1.33.8",
    "fastapi (>=0.115.8,<0.116.0)",
]

[project.license]
text = "MIT"

[project.scripts]
run_server = "owyn_pr_agent.main:run_server"
run_crew = "owyn_pr_agent.main:run"
train = "owyn_pr_agent.main:train"
replay = "owyn_pr_agent.main:replay"
test = "owyn_pr_agent.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
